add Immutable.js and design

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.8.2/immutable.min.js" integrity="sha512-myCdDiGJRYrvRb/VuJ67ljifYTJdc1jdEvL4c4ftX9o3N6EAnmD83c/7l2/91RCINZ7c8w21tiXDT7RDFjdc3g==" crossorigin="anonymous"></script>
-    <title>Document</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,200;1,300&family=Poiret+One&family=Righteous&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/stylesheets/index.css">
+    <link rel="stylesheet" href="assets/stylesheets/resets.css">
+    <title>Mars Rovers Dashboard</title>
 </head>
 
 <body>
     <main>
         <div id="root">
-            <h1>Loading...</h1>
+
+            <section id="wrapper">
+              <div id="stars"></div>
+              <div id="stars2"></div>
+              <div id="stars3"></div>
+              <h1>Loading...</h1>
         </div>
     </main>
 </body>
